--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "vue-lazy-load-image",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "description": "Load an image sequentially to improve the load time.",
+  "author": "wildanv10",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build:local": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-lazy-load-image ./src/index.js",
+    "build:patch": "npm version patch"
   },
+  "main": "dist/vue-lazy-load-image.common.js",
+  "files": [
+    "dist/*",
+    "*.md",
+    "*.json",
+    "*.js"
+  ],
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
@@ -18,6 +27,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
